--- a/theme/styles/common.css
+++ b/theme/styles/common.css
@@ -251,7 +251,7 @@ footer {
 }
 
 .product-cover {
-    top: -150px;
+    margin-top: -150px;
     min-height: 200px;
 }
 .product-cover__image {
@@ -279,7 +279,7 @@ footer {
 
 @media screen and (max-width: 768px) {
     .product-cover {
-        top: -120px;
+        margin-top: -120px;
         width: 180px;
         float: left;
         margin-right: 20px;
